assets/scss/modules/_notifications.scss
.flash {
  border: 3px solid $grey-1;
  background-color: $grey-9;
  padding: em(20);
  margin-bottom: em(40);
  max-width: em(798);

  h2 {
    margin: 0;
    font-weight: bold;
  }

  h3 {
    margin: 0 0 em(10);
  }

  ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
  }

  li {
    list-style-type: none;
  }
}

.flash.error-summary {
  border-color: $error-border-color;
  background-color: $error-bg-color;

  h2 {
    margin: 0 0 em(10);
  }

  li {
    color: $error-color;
  }

  a {
    color: $error-color;

    &:hover {
      text-decoration: none;
    }
  }
}

.flash.success {
  border-color: #85994b;
  background-color: #e7ebda;

  h2 {
    margin: 0 0 em(10);
  }
}

.alert {
  clear: both;
  border-left-width: em(3);
  border-left-style: solid;
  margin: 0 0 em(20);
  padding: em(17) em(15);

  .alert__message {
    margin: 0 0 em(10);
    @include core-19();

    &:last-of-type {
      margin-bottom:0;
    }
  }

  .minimise {
    float: right;
    text-align: right;
    margin-top: em(-5);
    margin-bottom: em(10);

    @include media(mobile) {
      margin-top: 0;
      display: block;
      float: none;
    }
  }
}

.alert--success {
  background-color: $success-bg-color;
  border-color: $success-border-color;
}

.alert--failure {
  background-color: $error-bg-color;
  border-color: $error-color;
  color: $error-color;
}

.alert--important {
  background-color: $alert-bg-red;
  color: $white;
}

.alert--info {
  background-color: $info-bg-color;
  border-color: $info-border-color;
  position: relative;
  margin: em(10) 0;

  &.alert--info__light {
    background-color: $shaded-bg-grey;
    border-color: $light-grey;
  }
}

.alert--borderless {
  border: 0;
  border-left-style: none;
}

.alert--slim {
  padding: 0.4em 0.8em 0.3em;
  border-left-width: em(4);
}

.highlight-message {
  width: 100%;
  box-sizing: border-box;
  border-left: 4px solid $black;
  padding: em(5) 0 em(5) em(55);
  margin-bottom: em(15);

  background: $yellow-25 url("../images/icons/icon-important.png") no-repeat scroll 10px;
  @include device-pixel-ratio() {
    background-image: url("../images/icons/icon-important-2x.png");
    background-size: 27px 27px;
  }
  span {
    @include core-16;
    display: block;
    padding: em(2) 0;
  }
}

.highlight-message--content-body {
  @include media(desktop) {
    width: 61.66%;
    min-width: 28em;
  }
}

.highlight-message--full-width {
  padding-top: em(15);
  padding-bottom: em(15);
  @include media(desktop) {
    width: 100%;
    min-width: 100%;
  }
}

.highlight-message--indent {
  margin: em(20) em(40) em(20) 0;
}

.highlight-message--icon-top {
  background-position-y: em(20);
}

.highlight-message--dark {
  .highlight-message--dark-text {
    color: $white;
  }
  
  background-color: $govuk-blue-colour;
  color: $white;
  padding-bottom: em(30);
}

.highlight-message--light {
  background-color: $white;
  color: $black;
  padding-bottom: em(30);
}

